src/tests/testfiles/ternary-operator/types-5.txt
Error at 4:15: Ternary conditional operator alternatives should be of equal type
(1 || 2 ? c[0] : 10);
          ^
